# chip8

./: Cargo.toml  README.md
assembler/: Cargo.toml  README.md
assembler/asm/: cube.asm  font2.asm  heart.asm  syntax.asm
assembler/src/: ast.rs  codegen.rs  error.rs  main.rs  scanner.rs  span.rs  tokens.rs
assembler/src/parser/: instruction.rs  mod.rs
instructions/: Cargo.toml
instructions/src/: decoding.rs  encoding.rs  lib.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
interpreter/src/interpreter/: mod.rs
roms/: heart.ch8
src/: main.rs
src/interpreter/: instruction.rs  memory.rs  mod.rs
