[workspace]
resolver = "2"
members = ["assembler", "instructions", "interpreter"]

[workspace.package]
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/chip8"
license = "GPL-3.0"

[workspace.dependencies]
chip8-instructions = { path = "./instructions" }
