[package]
name = "ch8a"
version = "0.1.0"
description = "A simple assembler for a simple CHIP-8 assembly language."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chip8-instructions = { workspace = true, features = ["encode"] }
color-eyre = "0.6.2"
