[package]
name = "ch8a"
version = "0.1.0"
description = "A simple assembler for a simple CHIP-8 assembly language."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chip8-instructions = { workspace = true, features = ["encode"] }
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
lazy_static = "1.4.0"
