[package]
name = "chip8"
version = "0.1.0"
description = "A simple CHIP-8 interpreter."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chip8_base = "0.2.0"
clap = { version = "4.4.18", features = ["derive"] }
chip8-instructions = { workspace = true, features = ["decode"] }
rand = "0.8.5"
